# HAVOC_2.0

./: LICENSE  README.md  docker-compose.yml  makefile  test-gcc-compatibility.sh
client/: CMakeLists.txt
client/Build-wsl/: CMakeCache.txt  Makefile  cmake_install.cmake
client/Build-wsl/Havoc_autogen/: moc_predefs.h
client/Build-wsl/Havoc_autogen/4B7M45MYCV/: moc_SessionGraph.cpp  moc_SessionGraph.cpp.d
client/include/: global.hpp
client/include/UserInterface/Widgets/: LootWidget.h
client/src/Havoc/: Havoc.cc
client/src/UserInterface/: HavocUi.cc
client/src/UserInterface/Widgets/: LootWidget.cc  ScriptManager.cc
data/: client.db  server.cert  server.key  teamserver.db
docker/gcc16/: Dockerfile
payloads/Demon/include/core/: Win32.h
payloads/Demon/src/core/: Thread.c
payloads/DllLdr/: makefile
payloads/Shellcode/: makefile
payloads/Shellcode/Include/: Core.h
payloads/Shellcode/Source/: Entry.c  Win32.c
profiles/: havoc.yaotl  http_smb.yaotl
scripts/: build-client-wsl.sh  hydrate-client-deps.sh  verify-demon-compile.sh  verify-gcc16.sh
teamserver/: Install.sh
teamserver/cmd/server/: teamserver.go
teamserver/pkg/common/builder/: builder.go
